--- a/ticket/src/main/resources/application.properties
+++ b/ticket/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ticket
 spring.datasource.url = jdbc:mysql://localhost:3306/ticket
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
