--- a/ticket/src/main/resources/application.properties
+++ b/ticket/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+# Mailtrap SMTP configuration
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=dc5f4501c27f47
+spring.mail.password=5d0bc4fbcda314
+
+# TLS configuration (Mailtrap requires TLS)
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
