--- a/ticket/src/main/resources/application.properties
+++ b/ticket/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ticket
 spring.datasource.url = jdbc:mysql://localhost:3306/ticket
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password =
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,7 +12,6 @@ spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=587
 spring.mail.username=dc5f4501c27f47
 spring.mail.password=5d0bc4fbcda314
-
 # TLS configuration (Mailtrap requires TLS)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
